--- a/index.ipynb
+++ b/index.ipynb
@@ -73,12 +73,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = 'Janua'# \"January\""
+    "travel_month = 'January'# \"January\"\n"
    ]
   },
   {
